fixed clock clock visibillity bug

--- a/src/styles/newtab.scss
+++ b/src/styles/newtab.scss
@@ -78,4 +78,6 @@ video {
 	font-weight: 500;
 	line-height: 1;
 	text-transform: uppercase;
+  opacity: 0;
+  background-color: rgba(0, 0, 0, 0.1);
 }
