--- a/src/styles/options.scss
+++ b/src/styles/options.scss
@@ -19,9 +19,12 @@ body{
   	user-select: none; 
 }
 
+.video-contain{
+	position: relative;
+}
 
 video {
-     height: 100%;
+    height: 100%;
     width: 177.77777778vh; /* 100 * 16 / 9 */
     min-width: 100%;
     min-height: 56.25vw; /* 100 * 9 / 16 */
@@ -44,5 +47,4 @@ video {
 	line-height: 1;
 	text-transform: uppercase;
 	transition: opacity 200ms;
-	opacity: 0;
 }
